<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="HardcodedText">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/green_light">

                <TextView
                    android:id="@+id/navi_header_user_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/nologin"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/navi_header_user_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/navi_header_user_nickname"
                    app:layout_constraintTop_toBottomOf="@+id/navi_header_user_nickname" />

                <TextView
                    android:id="@+id/navi_header_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="설정"
                    android:textSize="18sp"
                    android:layout_margin="30dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/nav_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textStyle="bold"
                android:text="로그인"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="전체 게시판 목록"
                />
            <TextView
                android:id="@+id/nav_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:text="공지사항"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                />
            <TextView
                android:id="@+id/nav_community"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="반려동물 일상 게시판"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                />
            <TextView
                android:id="@+id/nav_community_qna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="반려동물 관련 질문 게시판"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                />
            <TextView
                android:id="@+id/nav_community_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="정보 공유 게시판"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                />
            <TextView
                android:id="@+id/nav_community_counseling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="상담 게시판"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="유기동물 게시판" />
            <TextView
                android:id="@+id/nav_abandoned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="유기동물 검색"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                />
            <TextView
                android:id="@+id/nav_abandoned_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="유기동물 제보"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="어플 게시판" />
            <TextView
                android:id="@+id/nav_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="오류 제보"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/adminmenu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="관리자"
                android:visibility="gone" />

            <TextView
                android:id="@+id/adminmenu_checkreq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="전문가 인증 요청"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</com.google.android.material.navigation.NavigationView>
