...
        android:layout_height="wrap_content"
        android:text="페스츄리"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/green" />
    <EditText
        android:id="@+id/login_id"
        android:inputType="text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="아이디"
        android:importantForAutofill="no"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="비밀번호"
        android:importantForAutofill="no"/>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="로그인"
        android:textSize="16sp"
        android:textColor="@color/gray"
...
