<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    app:contentInsetStart="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pet's Tree"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:layout_centerInParent="true" />
        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:visibility="visible"
            app:srcCompat="@drawable/green_menu_icon" />

    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>