...

        <View
            android:id="@+id/view_toolbar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/green_light"
            android:layout_below="@+id/main_toolbar"/>

        <include
            layout="@layout/toolbar"
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
...
